--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -69,6 +69,9 @@ http {
         }
 
         # Deny access to . files, for security
+        location ~ /\.well-known {
+            allow all;
+        }
         location ~ /\. {
             log_not_found off;
             deny all;
